force-app/main/default/objects/Zip_Master_FSA__c/Zip_Master_FSA__c.object-meta.xml
<CustomObject>
    <description>List of FSAs for mapping purposes</description>
    <label>Zip Master FSA</label>
    <nameField>
        <displayFormat>FSA-{0000}</displayFormat>
        <label>Zip Master FSA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Master FSA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>