force-app/main/default/objects/Zip_Master_FSA__c/fields/Distribution_Center__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Center</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Zip Master FSA</relationshipLabel>
    <relationshipName>Zip_Master_FSA</relationshipName>
    <type>Lookup</type>
</CustomField>