force-app/main/default/objects/Zip_Master_FSA__c/fields/FSA__c.field-meta.xml
<CustomField>
    <fullName>FSA__c</fullName>
    <description>Forward Sortation Area</description>
    <label>FSA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>