force-app/main/default/objects/Zip_Master_FSA__c/fields/FSA_Location__c.field-meta.xml
<CustomField>
    <fullName>FSA_Location__c</fullName>
    <description>Lat/long for FSA</description>
    <label>FSA Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>