force-app/main/default/objects/Zip_Master_FSA__c/fields/FSA_Place_Name__c.field-meta.xml
<CustomField>
    <fullName>FSA_Place_Name__c</fullName>
    <label>FSA Place Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>