force-app/main/default/objects/Zip_Master_FSA__c/fields/FSA_Province__c.field-meta.xml
<CustomField>
    <fullName>FSA_Province__c</fullName>
    <label>FSA Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>