force-app/main/default/objects/Zip_Master_FSA__c/fields/FSA_Tag__c.field-meta.xml
<CustomField>
    <fullName>FSA_Tag__c</fullName>
    <label>FSA Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>